Bloch Sphere visualizer!

--- a/Gate.html
+++ b/Gate.html
@@ -25,13 +25,13 @@
 		<meta name="twitter:site"         content="@stew_rtsmith">
 		<meta name="twitter:creator"      content="@stew_rtsmith">
 		<meta name="twitter:description"  content="Quantum computing in your browser.">
-		<meta name="twitter:title"        content="Q.js">
+		<meta name="twitter:title"        content="Q ⟩ Gate">
 		<meta name="twitter:image"        content="https://stewdio.github.io/q.js/Assets/q-thumbnail.png">
 		<meta name="twitter:url"          content="https://stewdio.github.io/q.js/">
 		
 		<meta property="og:type"          content="website">
 		<meta property="og:description"   content="Quantum computing in your browser.">
-		<meta property="og:title"         content="Q.js">
+		<meta property="og:title"         content="Q ⟩ Gate">
 		<meta property="og:image"         content="https://stewdio.github.io/q.js/Assets/q-thumbnail.png">
 		<meta property="og:url"           content="http://stewartsmith.io">
 		
