--- a/index.html
+++ b/index.html
@@ -382,6 +382,12 @@ a.<a href="ComplexNumber.html#.prototype.multiply">multiply</a>( a )
 </code></pre>						
 					</dd>
 				</li>
+				<li>
+					<dt id=".RADIANS_TO_DEGREES"><a href="#.RADIANS_TO_DEGREES">RADIANS_TO_DEGREES</a></dt>
+					<dd>
+						180 ÷ π
+					</dd>
+				</li>
 			</ul>
 			<hr>
 			<h3 id="Properties">Properties</h3>
