--- a/index.html
+++ b/index.html
@@ -464,6 +464,14 @@ a.<a href="ComplexNumber.html#.prototype.multiply">multiply</a>( a )
 						Description TK.
 					</dd>
 				</li>
+				<li>
+					<dt id=".toTitleCase"><a href="#.toTitleCase">toTitleCase( text )</a></dt>
+					<dd>
+						Replaces underscores with spaces, breaks apart string in to words, 
+						capitalizes the first letter of each word,
+						the returns a new string with these changes.
+					</dd>
+				</li>
 			</ul>
 			<hr>
 			Source:
